--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,7 @@
 #
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
-
+precompile_assets: false
+precompile_unchanged_assets: false
 en:
   hello: "Hello world"
